--- a/tq5124.md
+++ b/tq5124.md
@@ -31,3 +31,8 @@ Walk through the `table_scan_translator_test`
 7. [table_scan_translator.cpp#Produce](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table_scan_translator.cpp#L78)
 8. [table.cpp#GenerateVectorizedScan](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L62)
 9. [table.cpp#DoGenerateScan](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L97)
+
+How would a table scan get tuples number?
+1. [table.cpp#DoGenerateScan](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L76)
+2. [table.cpp#GetTileGroupCount](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L31)
+3. [data_table_proxy.cpp#GetFunction](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/data_table_proxy.cpp#L65)
