--- a/tq5124.md
+++ b/tq5124.md
@@ -30,7 +30,10 @@ Walk through the `table_scan_translator_test`
 6. [compliation_context.cpp#Produce](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/compilation_context.cpp#L58)
 7. [table_scan_translator.cpp#Produce](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table_scan_translator.cpp#L78)
 8. [table.cpp#GenerateVectorizedScan](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L62)
-9. [table.cpp#DoGenerateScan](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L97)
+9. [table.cpp#DoGenerateScan](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L106)
+10. [tile_group.cpp#GenerateVectorizedTidScan](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/tile_group.cpp#L80)
+11. [table_scan_translator.cpp::ScanConsumer#ScanBody](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table_scan_translator.cpp#L111)
+12. [table_scan_translator.cpp::ScanConsumer#FilterRows](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table_scan_translator.cpp#L197)
 
 How would a table scan get tuples number?
 1. [table.cpp#DoGenerateScan](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L76)
