--- a/tq5124.md
+++ b/tq5124.md
@@ -39,3 +39,8 @@ How would a table scan get tuples number?
 1. [table.cpp#DoGenerateScan](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L76)
 2. [table.cpp#GetTileGroupCount](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/table.cpp#L31)
 3. [data_table_proxy.cpp#GetFunction](https://github.com/tq5124/peloton-1/blob/codegen/src/codegen/data_table_proxy.cpp#L65)
+
+Which functions in plan_func needs to be thread-safe?
+
+* PerformVectorizedRead at [table_scan_translator_test](https://github.com/tq5124/peloton-1/blob/multi/src/codegen/table_scan_translator.cpp#L171)
+* emplace_push at [buffer_consumer](https://github.com/tq5124/peloton-1/blob/multi/src/codegen/buffering_consumer.cpp#L57)
