--- a/tq5124.md
+++ b/tq5124.md
@@ -43,4 +43,26 @@ How would a table scan get tuples number?
 Which functions in plan_func needs to be thread-safe?
 
 * PerformVectorizedRead at [table_scan_translator_test](https://github.com/tq5124/peloton-1/blob/multi/src/codegen/table_scan_translator.cpp#L171)
+
+```
+(gdb) backtrace
+#0  0x00007ffff6697990 in std::equal_to<unsigned int>::operator() (this=0x7a0668, __x=@0x7fffe22ffa98: 37, __y=@0x8: <error reading variable>) at /usr/include/c++/5/bits/stl_function.h:357
+#1  0x00007ffff673bc7f in std::__detail::_Equal_helper<unsigned int, std::pair<unsigned int const, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > > >, std::__detail::_Select1st, std::equal_to<unsigned int>, unsigned long, false>::_S_equals (__eq=..., __extract=..., __k=@0x7fffe22ffa98: 37, __n=0x0) at /usr/include/c++/5/bits/hashtable_policy.h:1333
+#2  0x00007ffff673b704 in std::__detail::_Hashtable_base<unsigned int, std::pair<unsigned int const, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > > >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Hashtable_traits<false, false, true> >::_M_equals (this=0x7a0668, __k=@0x7fffe22ffa98: 37, __c=37, __n=0x0) at /usr/include/c++/5/bits/hashtable_policy.h:1704
+#3  0x00007ffff673afb9 in std::_Hashtable<unsigned int, std::pair<unsigned int const, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > > >, std::allocator<std::pair<unsigned int const, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > > > >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >::_M_find_before_node (this=0x7a0668, __n=1, __k=@0x7fffe22ffa98: 37, __code=37) at /usr/include/c++/5/bits/hashtable.h:1433
+#4  0x00007ffff673a73c in std::_Hashtable<unsigned int, std::pair<unsigned int const, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > > >, std::allocator<std::pair<unsigned int const, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > > > >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >::_M_find_node (this=0x7a0668, __bkt=1, __key=@0x7fffe22ffa98: 37, __c=37) at /usr/include/c++/5/bits/hashtable.h:632
+#5  0x00007ffff673a1ff in std::_Hashtable<unsigned int, std::pair<unsigned int const, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > > >, std::allocator<std::pair<unsigned int const, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > > > >, std::__detail::_Select1st, std::equal_to<unsigned int>, std::hash<unsigned int>, std::__detail::_Mod_range_hashing, std::__detail::_Default_ranged_hash, std::__detail::_Prime_rehash_policy, std::__detail::_Hashtable_traits<false, false, true> >::find (this=0x7a0668, __k=@0x7fffe22ffa98: 37) at /usr/include/c++/5/bits/hashtable.h:1307
+#6  0x00007ffff673a021 in std::unordered_map<unsigned int, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > >, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, std::unordered_map<unsigned int, peloton::RWType, std::hash<unsigned int>, std::equal_to<unsigned int>, std::allocator<std::pair<unsigned int const, peloton::RWType> > > > > >::find (this=0x7a0668, __x=@0x7fffe22ffa98: 37) at /usr/include/c++/5/bits/unordered_map.h:615
+#7  0x00007ffff6739163 in peloton::concurrency::Transaction::RecordRead (this=0x7a0640, location=...) at /peloton/src/concurrency/transaction.cpp:69
+#8  0x00007ffff67317cb in peloton::concurrency::TimestampOrderingTransactionManager::PerformRead (this=0x7ffff7dc84c0 <peloton::concurrency::TimestampOrderingTransactionManager::GetInstance()::txn_manager>, current_txn=0x7a0640, 
+    location=..., acquire_ownership=false) at /peloton/src/concurrency/timestamp_ordering_transaction_manager.cpp:458
+#9  0x00007ffff66fa27a in peloton::codegen::TransactionRuntime::PerformVectorizedRead (txn=..., tile_group=..., tid_start=0, tid_end=32, selection_vector=0x7fffe22ffcc0) at /peloton/src/codegen/transaction_runtime.cpp:55
+#10 0x00007ffff7ff51ee in ?? ()
+#11 0x0000000000000001 in ?? ()
+#12 0x000000000088d7b0 in ?? ()
+#13 0x0000000000000000 in ?? ()
+```
+
 * emplace_push at [buffer_consumer](https://github.com/tq5124/peloton-1/blob/multi/src/codegen/buffering_consumer.cpp#L57)
+
+
