--- a/src/wire/README
+++ b/src/wire/README
@@ -5,9 +5,9 @@
 #####################################################
 
 Description
-This is a prototype implementation of the Postgres wire protocol in C++ in order to support communication with Postgres shell and JDBC clients with Peloton. To test the correctness of the implementation, this protocol is backed against Sqlite. This helps us provide the required database support for fully executing the YCSB and TPCC benchmarks and inspecting whether this protocol design can potentially support these benchmarks.
+This is a prototype implementation of the Postgres network protocol in C++ in order to support communication with Postgres shell and JDBC clients with Peloton. To test the correctness of the implementation, this protocol is backed against Sqlite. This helps us provide the required database support for fully executing the YCSB and TPCC benchmarks and inspecting whether this protocol design can potentially support these benchmarks.
 
-The Sqlite sources have been included in the source folder for the wire protocol, to avoid introducing Sqlite linking dependencies in the Peloton Makefiles.
+The Sqlite sources have been included in the source folder for the network protocol, to avoid introducing Sqlite linking dependencies in the Peloton Makefiles.
 
 The protocol abstracts the server-client interaction for every query through packet formats. The full details about the protocol can be found in the Postgres Documentation.
 
@@ -32,7 +32,7 @@ Deployment and Testing
     Run oltpbench/ycsb for more comprehensive tests
 
 
-Basic implementation of the Postgres wire protocol for Peloton.
+Basic implementation of the Postgres network protocol for Peloton.
 
 This currently exists as a standalone server devoid of query parser, planner or any other DB internals. 
 Only server side of the protocol is covered.
